[package]
name = "mapreduce"
description = "Distributed MapReduce implementation in Rust"
repository = "https://github.com/sahilpabale/mapreduce"
readme = "README.md"
license = "MIT"
publish = false
version = "0.0.1"
edition = "2021"
authors = ["Sahil Pabale <dev.sahilpabale@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
